--- a/.github/workflows/new_issue.yml
+++ b/.github/workflows/new_issue.yml
@@ -11,6 +11,6 @@ jobs:
     - name: Assign to Project
       uses: srggrs/assign-one-project-github-action@1.3.1
       with:
-        project: 'Token Listings'
-        status: 'Todo'
+        project: 'Koindx project'
+        status: 'Backlog'
         repo-token: ${{ secrets.GITHUB_TOKEN }}
